# kpi

./: README.md
Computational math/: README.md
Computational math/lab 1/: functions.h  main.cpp
Computational math/lab 2/: main.cpp
IT-1/: README.md
IT-1/lab 1/: lab1.m  lab1_2.m
IT-1/lab 2/: lab2.m  lab2_2.m  lab2_3.m
IT-1/lab 3/: lab3.m  polysum  polysum.m  readme.txt  run_polysum.sh
IT-1/lab 4/: lab4.m
OOP/: README.md  ocv.cpp
OOP/lab 1/: CMakeLists.txt  Receipt.cpp  Receipt.h  main.cpp
OOP/lab 2/: CMakeLists.txt  goods.cpp  goods.h  main.cpp  milk_product.cpp  milk_product.h  product.cpp
OOP/lab 3/: CMakeLists.txt  TObject.h  goods.h  main.cpp  product.h  toy.cpp
OOP/lab 4/: CMakeLists.txt  goods.cpp  goods.h  main.cpp  milk_product.cpp  product.cpp  toy.cpp  toy.h
OOP/led_ctrl/: CMakeLists.txt  README.md  keywords.txt  led_ctrl.cpp  led_ctrl.h  library.properties  untitled_test.cpp
informatics-1/: README.md  i.txt  lab10.cpp  lab11.cpp  lab12.cpp  lab13.cpp  lab14.cpp  lab8.cpp  lab9.cpp
informatics-2/: README.md  lab1.cpp  lab2.cpp  lab3.cpp
informatics-2/lab4-5_CASINO/: CMakeLists.txt  Croupier.cpp  Croupier.h  Employee.cpp  Employee.h  Hall.cpp  Hall.h  Human.cpp  Human.h  Player.cpp  Player.h  Winning.cpp  Winning.h  (+3 more)
informatics-2/lab4-5_beautySaloon/: Barber.cpp  Barber.h  CMakeLists.txt  CashMachine.cpp  CashMachine.h  Cashbox.cpp  Cashbox.h  Client.cpp  Client.h  Date.cpp  Date.h  Employee.cpp  Employee.h  Human.cpp  Human.h  Room.cpp  Room.h  Schedule.cpp  Schedule.h  Service.cpp  Service.h  compiling_error.txt  log  main.cpp
(+2 files in other folders)
